--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,13 @@
-@import "tailwindcss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 body {
     padding: 0;
+    background-color: red;
 }
 
 :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-    /* line-height: 1.5;
-    font-weight: 400;
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale; */
     padding: 0px;
 }
 
